# lembas

./: README.md
backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md  compose.yml  dev.sql  template.yml  test.json
backend/.sqlx/: query-26e2ee3f0a78c3efa5df0c755341f99ed072778e6a9e1f9c6f3a409def6a75d2.json  query-27fe3f5629475316580e2e0274fab88dadd710d516b25cb780963a37f68fdf33.json  query-43d7b22f3b4f01b8bd811b9c4b64c56497c3df6fd56098e4232511c7847a0a66.json  query-4615d55fecb1ab129fb4ec304311a7944d7a84ed023d0d152b88749ad292ef35.json  query-5bc7ad98d3957ad19bb2b8767314ea18ea0a2b14a8dbe1d9f4c7be1b9b180525.json  query-6b3ae877146da6de17a428d0b5d9be777d2cc9d1b75eb921b1286b649dbb38b3.json  query-82a7fb79a5516c2bd55c11e78a24733eaf56e338cec1c054ee361aa84cf34a11.json  query-9ba07c0a46cfa49614fcf5d859f52a97ccd639e1faf16b7eb3c7773a8aeaff2d.json  query-c1fcc3d92a229222ca50690d9e3e3b542b9ad3f8ff490e1c81dabf2a13870534.json  query-c5a58becd63130bc3f38e22dc98accdce0ac32700e696bf978da8560b40571c4.json  query-f87c0e7bec31e9073731465a60f5cb7233916bc83c79ee4237e6d4b6de7332df.json
backend/api/: Cargo.toml
backend/api/src/: lib.rs  schema.rs
backend/bruno/: bruno.json  create-ingredient.bru  create-recipe.bru  create-reminder.bru  get-ingredient.bru  get-recipe.bru  get-recipes.bru  get-reminder.bru  get-reminders.bru  update-recipe.bru
backend/bruno/account/: get-accounts.bru
backend/bruno/accounts/: get-account.bru
backend/bruno/day/: create-day.bru  delete-day.bru  get-days.bru
backend/bruno/healthcheck/: healthcheck.bru
backend/bruno/ingredient/: create-ingredient.bru  delete-ingredient.bru  get-ingredient.bru  get-ingredients.bru  search-ingredients.bru  update-ingredient.bru
backend/bruno/list/: get-list.bru
backend/bruno/parse/: parse_recipe.bru  parse_recipe_2.bru  parse_recipe_3.bru  parse_recipe_4.bru  parse_recipe_5.bru
backend/db/: devdata.sql
backend/entity/: Cargo.toml
backend/migrations/: 20231019153821_initial.sql  20240220164712_ingredient_data.sql  20240520160553_initial.sql
backend/src/: main.rs
backend/tests/: api_write.rs  common.rs  day.rs  recipe.rs  recipe_parser.rs
foodloader/: Cargo.toml  README.md
foodloader/data/: ingredients.json  ingredients.sql  responses.json
foodloader/src/: loader.rs  main.rs  scraper.rs
frontend/: .gitignore  (+3 more)
(+125 files in other folders)
