[package]
name = "lembas"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = []

[dependencies]
rustls = "0.21.7"
axum = { version = "0.6.20", features = ["json", "headers"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
time = { version = "0.3.30", features = ["serde", "parsing"] }
hyper = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.22", features = ["json", "stream", "gzip"] }
jsonwebtoken = "9.2.0"
