[package]
name = "lembas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
	"chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
