[package]
name = "foodloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.21.7"
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
] }
serde = "1.0.193"
reqwest = { version = "0.11.22", features = ["json", "stream", "gzip"] }
serde_json = "1.0.108"
rand = "0.8.5"
regex = "1.10.2"
